fix reviewer comments